# parakeet-talon

./: .gitignore  LICENSE  README.md  parakeet.env  parakeet.env.example
.github/workflows/: release.yml
plugin/: engine.py  engine.talon  requirements.txt  sidecar.py
scripts/: install.ps1  install.sh
sidecar-rs/: Cargo.toml
sidecar-rs/core/: Cargo.toml
sidecar-rs/core/src/: lib.rs  model.rs  recognizer.rs  runtime.rs
sidecar-rs/parakeet/: Cargo.toml
sidecar-rs/parakeet/src/: main.rs
sidecar-rs/qwen/: Cargo.toml
sidecar-rs/qwen/src/: main.rs
sidecar-rs/src/: audio.rs  main.rs  model.rs  protocol.rs  recognizer.rs
