[package]
name = "sidecar-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "sidecar_core"
path = "src/lib.rs"

[dependencies]
cpal = "0.15"
rubato = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
crossbeam-channel = "0.5"
reqwest = { version = "0.12", features = ["blocking", "stream"] }
dotenvy = "0.15"
