[package]
name = "qwen-sidecar"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qwen-sidecar"
path = "src/main.rs"

[dependencies]
sidecar-core = { path = "../core" }
anyhow = "1"

# Qwen3-ASR inference via sherpa-onnx (ONNX Runtime, int8). Statically links the
# native sherpa-onnx + onnxruntime libs (build.rs auto-downloads prebuilt
# binaries per target), so the sidecar stays self-contained and runs fast on
# CPU across Windows/Linux/macOS.
sherpa-onnx = "1.13.2"

# The int8 model ships as a .tar.bz2 release asset; fetched + extracted on first run.
tar = "0.4"
bzip2 = "0.5"
